web/resources/styles/pray.css
#rite-page-container {
	position: relative;
	max-width: 100em;
}

#side-panel-left, #side-panel-right {
	width: 20em;
	flex-shrink: 0;
}

.violacei-theme-color {
	background-color: #fcdaff;
}

.rubri-theme-color {
	background-color: #ffcfcf;
}

.viridis-theme-color {
	background-color: #cfe8cf;
}

.aurei-theme-color {
	background-color: var(--generic-white-background-color);
}

@media only screen and (max-width: 70em) {
	#side-panel-left, #side-panel-right {
		display: none;
	}
}

#rite-container {
	font-family: "Old Standard TT", times;
	padding: 10px 40px 60px 40px;
	height: 100%;
	background-color: var(--generic-white-background-color);
	display: block;
}

.rite-name {
	text-align: center;
}

.text-container-latin {
	margin: 0;
	padding: 0;
}

.text-container-translation {
	margin: -16px 0 0 0;
	padding: 0;
}

.chant-wrapper {
	width: 0;
}

.chant-content-translation {
	font-size: 18px;
	line-height: 1;
	color: #222;
}

.decorated-wrapper {
	display: flex;
}

.decoration-left-wrapper {
	width: 15%;
}

.decorated-content-wrapper {
	width: 85%;
}

#options-panel-background {
	position: fixed;
	width: 100%;
	height: 100%;
	background-color: rgba(249, 249, 249, .7);
	z-index: 1;
}

#options-panel {
	position: fixed;
	left: 50vw;
	top: 50vh;
	transform: translate(-50%, -50%);
	width: 30em;
	height: 50vh;
	max-width: 100%;
	background-color: var(--generic-white-background-color);
	display: flex;
	flex-direction: column;
	gap: 7px;
	padding: 20px;
	font-family: times;
}

#options-panel-title {
	text-align: center;
	font-size: 20px;
	font-weight: bold;
}

.options-panel-button-off {
	font-style: italic;
}

.options-panel-button-on {
	background-color: var(--button-color-toggled) !important;
}

.options-panel-button {
	background-color: var(--button-color);
}

.options-panel-button:hover {
	background-color: var(--button-color-hover);
}

.options-panel-section-head {
	text-align: center;
	margin: 0;
}

.recitation-select-container {
	display: flex;
	flex-direction: row;
	gap: 7px;
}

.recitation-select-button {
	flex-grow: 1;
}

#options-panel-require-initialized-container {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: row;
	padding-top: 7px;
}

#coincidences-list-container {
	flex-grow: 0;
	flex-basis: 50%;
	padding-left: 14px;
	padding-right: 14px;
}

.coincidences-label {
	margin-top: 0;
	margin-bottom: 0;
	font-weight: normal;
	font-style: italic;
	color: red;
}

.coincidence-entry {
	margin-left: 5px;
	cursor: not-allowed;
	font-size: 14px;
}

.non-dicitur {
	color: #333;
	font-size: 14px;
	font-style: italic;
}

.permitted-entry {
	cursor: pointer;
}

#selected-entry {
}

#ambit-select-wrapper {
	flex-grow: 0;
	flex-basis: 50%;
	height: 100%;
}

#ambit-select-container {
	display: flex;
	flex-direction: column;
	gap: 7px;
	height: 100%;
	border-left: 1px solid var(--border-color);
	padding-left: 14px;
	padding-right: 14px;
}

#bottom-easy-select-container {
	position: fixed;
	bottom: 0;
	left: 50%;
	transform: translate(-50%, 0);
	max-width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
}

#bottom-easy-select-hide {
	width: 100px;
	height: 20px;
	background-color: var(--button-color);
}

#bottom-easy-select-hide:hover {
	background-color: var(--button-color-hover);
}

#bottom-easy-select-content-container {
	background-color: rgba(249, 249, 249, .8);
	border: 1px solid var(--border-color);
	border-radius: 5px;
	font-family: times;
	padding-bottom: 10px;
}

#bottom-easy-select-hide-icon {
	height: 30px;
	margin-top: -5px;
}

.bottom-easy-select-hide-icon-closed {
	transform: rotate(180deg);
}

#date-selector-container {
	margin: 0;
	display: flex;
	justify-content: center;
	gap: 7px;
}

#date-selector-text {
	height: 30px;
	font-size: 18px;
	border: 1px solid var(--border-color);
	border-radius: 5px;
	cursor: pointer;
	font-family: times;
	color: black;
}

.date-selector-button {
	width: 30px;
	height: 30px;
	padding-top: 5px;
	text-align: center;
	font-size: 24px;
}

.date-selector-button:hover {
	background-color: var(--button-color-hover);
}

#options-button {
	height: 30px;
	text-align: center;
	font-size: 18px;
	background-color: var(--button-color);
}

#options-button:hover {
	background-color: var(--button-color-hover);
}

#rite-selector-container {
	width: 100%;
	margin-top: 10px;
	display: flex;
	justify-content: center;
	gap: 7px;
	min-height: 35px;
	flex-wrap: wrap;
}

.rite-selector-button {
	background-color: var(--button-color);
	height: 25px;
	text-align: center;
	font-size: 16px;
	padding-top: 5px;
}

.rite-selector-button:hover {
	background-color: var(--button-color-hover);
}

.rite-selector-button-selected {
	background-color: var(--button-color-toggled) !important;
}

@media print {
	#options-panel, #side-panel-left, #side-panel-right, #bottom-easy-select-container {
		display: none;
	}
}

.large-title {
	color: red;
	font-variant: small-caps;
	font-size: 24px;
	text-align: center;
	margin-bottom: 0;
}

.large-subtitle {
	color: red;
	font-variant: small-caps;
	font-size: 18px;
	text-align: center;
	margin-top: 0;
}

.rite-item {
	margin: 0;
	padding: 0;
}

.small-title {
	color: red;
	font-variant: small-caps;
	font-size: 22px;
	text-align: center;
	margin-bottom: 0;
}

.section-header {
	text-align: center;
	color: red;
	font-size: 22px;
	font-variant: small-caps;
	margin: 0;
}

.rite-text {
	font-size: 20px;
	line-height: 1.25;
	margin-top: 7px;
	margin-bottom: 14px;
}

.with-translation {
	margin-bottom: 6px;
}

.rite-text-translation {
	margin-top: 0;
	font-size: 14px;
	line-height: 1;
	color: #111;
	padding-left: 10px;
	font-style: italic;
}

.rite-text-rubric {
	font-size: 14px;
	color: red;
	font-style: italic;
}

.item-header {
	text-align: center;
	color: red;
	font-size: 20px;
	font-variant: small-caps;
	margin: 0;
}

.psalm-subheader {
	text-align: center;
	color: red;
	font-size: 18px;
	font-variant: small-caps;
	margin: 0;
}

.compensatory-separator {
	height: 6px;
}

.aperi-domine, .sacrosanctae {
	font-size: 16px;
}

.evangelium-matutini::first-letter, .hymnus::first-letter, .capitulum::first-letter, .antiphona::first-letter, .martyrologium::first-letter {
	font-weight: bold;
	color: red;
}

.textus-psalmi::first-letter, .lectio-incipiens::first-letter, .lectio-sequens::first-letter, .epiphania-venite-incipit::first-letter {
	float: left;
	font-size: 94px;
	font-weight: bold;
	margin-right: 0.3rem;
	color: red;
	line-height: 0;
	initial-letter: 3;
	-webkit-initial-letter: 3;
}

.lectio-sequens::first-letter {
	font-size: 60px !important;
	initial-letter: 2;
	-webkit-initial-letter: 2;
}

.rubricum {
	margin-bottom: 0;
}

@media only screen and (max-width: 650px) {
	.textus-psalmi::first-letter, .lectio-incipiens::first-letter, .lectio-sequens::first-letter, .epiphania-venite-incipit::first-letter {
		font-size: initial;
		float: initial;
		line-height: initial;
	}

	#rite-container {
		padding: 10px 30px 60px 30px;
	}
}

.verse-number {
	font-size: 8px;
	color: red;
}

